--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-    crossorigin="anonymous"
-    />
+    crossorigin="anonymous"/>
     <title>Mining Project</title>
   </head>
   <body>
@@ -55,8 +54,6 @@
             </div>
         </nav>
         <canvas id="canvas"></canvas>
-        <div class="elipse"></div>
-        <div class="elipse-two"></div>
         <div class="welcome__block">
             <div class="container">
                 <div class="row justify-content-center">
@@ -69,32 +66,110 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
         <div class="flip__block">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="flip__block-rect">
+                        <div class="flip__block-inner">
+                            <div class="flip__block-rect">
                             <img src="img/flip_card.svg" alt="">
                             <h1 class="flip__block-procent-text">1%</h1>
                             <p class="flip__block-procent-info">на 100 дней</p>
-                            <p class="flip_block-procent-subtext">от 10 до 3 000$ - тело депозита замораживается на 100 дней.</p>
+                            <p class="flip__block-procent-subtext">от 10 до 3 000$ - тело депозита замораживается на 100 дней.</p>
+                            </div>
+                            <div class="flip__block-rect-back">
+                            <img src="img/flip_rect-back.svg" alt="">
+                            <p class="flip__block-procent-text-back">Вывод депозита 1-30 дней - <span class="text-back-span">штраф 30%</span></p>
+                            <p class="flip__block-procent-text-back">Вывод депозита 31-70 дней- <span class="text-back-span">штраф 20%</span></p>
+                            <p class="flip__block-procent-text-back">Вывод депозита 71-100 дней - <span class="text-back-span">штраф 10%</span></p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="flip__block-rect second-rect">
+                        <div class="flip__block-inner">
+                            <div class="flip__block-rect second-rect">
                             <img src="img/flip_card.svg" alt="">
                             <h1 class="flip__block-procent-text">1,3%</h1>
                             <p class="flip__block-procent-info">на 100 дней</p>
-                            <p class="flip_block-procent-subtext">от 3000 до 10 000$ - тело депозита замораживается на 100 дней.</p>
+                            <p class="flip__block-procent-subtext">от 3000 до 10 000$ - тело депозита замораживается на 100 дней.</p>
+                            </div>
+                            <div class="flip__block-rect-back">
+                            <img src="img/flip_rect-back.svg" alt="">
+                            <p class="flip__block-procent-text-back">Вывод депозита 1-30 дней - <span class="text-back-span">штраф 30%</span></p>
+                            <p class="flip__block-procent-text-back">Вывод депозита 31-70 дней- <span class="text-back-span">штраф 20%</span></p>
+                            <p class="flip__block-procent-text-back">Вывод депозита 71-100 дней - <span class="text-back-span">штраф 10%</span></p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="flip__block-rect third-rect">
+                        <div class="flip__block-inner">
+                            <div class="flip__block-rect third-rect">
                             <img src="img/flip_card.svg" alt="">
                             <h1 class="flip__block-procent-text">1,5%</h1>
                             <p class="flip__block-procent-info">на 100 дней</p>
-                            <p class="flip_block-procent-subtext">от 10 000 до 100 000$ - тело депозита замораживается на 100 дней.</p>
+                            <p class="flip__block-procent-subtext">от 10 000 до 100 000$ - тело депозита замораживается на 100 дней.</p>
+                            </div>
+                            <div class="flip__block-rect-back">
+                            <img src="img/flip_rect-back.svg" alt="">
+                            <p class="flip__block-procent-text-back">Вывод депозита 1-30 дней - <span class="text-back-span">штраф 30%</span></p>
+                            <p class="flip__block-procent-text-back">Вывод депозита 31-70 дней- <span class="text-back-span">штраф 20%</span></p>
+                            <p class="flip__block-procent-text-back">Вывод депозита 71-100 дней - <span class="text-back-span">штраф 10%</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="features">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="features__title">
+                            <img src="img/accept.svg" alt="">
+                            <div class="feature__text-block">
+                                <p class="features__text">Инстант</p>
+                                <p class="features__subtext">(ручные, быстрые) выплаты</p>
+                            </div>
+                        </div>
+                        <div class="features__subtitle">
+                            <img src="img/accept.svg" alt="">
+                            <div class="feature__text-block">
+                                <p class="features__text">Порог входа от 10$</p>
+                                <p class="features__subtext">и первая прибыль через 5-30 дней.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="features__title">
+                            <img src="img/accept.svg" alt="">
+                            <div class="feature__text-block">
+                                <p class="features__text">Реферальная программа</p>
+                                <p class="features__subtext">имеет три уровня 7%, 3% и 1% </p>
+                            </div>
+                        </div>
+                        <div class="features__subtitle">
+                            <img src="img/accept.svg" alt="">
+                            <div class="feature__text-block">
+                                <p class="features__text">Процент дохода выше чем в </p>
+                                <p class="features__subtext">банках и других видах инвестиций.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="features__title">
+                            <img src="img/accept.svg" alt="">
+                            <div class="feature__text-block">
+                                <p class="features__text">Тело депозита возвращается</p>
+                                <p class="features__subtext">в конце срока инвестирования.</p>
+                            </div>
+                        </div>
+                        <div class="features__subtitle">
+                            <img src="img/accept.svg" alt="">
+                            <div class="feature__text-block">
+                                <p class="features__text">Простое ведение бизнеса</p>
+                                <p class="features__subtext">с нашей квалифицированной помощью.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -105,6 +180,7 @@
 
 
     <script src="script.js"></script>
+    <script src="flip.js"></script>
     <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
